# sh_quant

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  ROADMAP.md  TASKS.md  pyproject.toml  pytest.ini  requirements.txt  setup.sh
.githooks/: commit-msg
config/: __init__.py  config.py  core_kpi.yaml  news_radar.json  notify_filter.yaml  signals.yaml  source-tiers.yaml  themes.yaml
docs/: DATA_SCHEMA.md  signal-notify-wealthpilot-spec.md
notebooks/: 01_factor_momentum_baseline.ipynb
scripts/: backfill_us_adj_factor.py  daily_update.sh  dedup_stocks_cache.py  fetch_10jqka_post.py  migrate_trade_date_dtype.py  notify_digest.py  probe_capital_flow_sources.py  probe_futu_hk_financials.py  probe_kpi_sources.py  probe_tushare_vs_yahoo.py  probe_us_adj_factor.py  pull_capital_flow_env06.py  pull_capital_flow_in01.py  pull_capital_flow_in04.py  pull_capital_flow_out01.py  pull_capital_flow_out03.py  pull_cninfo.py  pull_daily_basic.py  pull_delisted.py  pull_etfs.py  pull_financials.py  pull_hk_financials.py  pull_hk_futu.py  pull_hk_universe.py  pull_holders.py  pull_kpi.py  pull_macro.py  pull_news_radar.py  pull_sector_turnover.py  pull_sfc_short_positions.py  pull_signals.py  pull_sw_industries.py  pull_sw_l1.py  pull_theme_stocks.py  pull_trendforce.py  pull_universe.py  pull_us_daily_basic.py  pull_us_universe.py  test_efinance_depth.py  test_futu_connection.py  (+3 more)
tests/: conftest.py  test_data.py  test_notify_filter.py  test_pull_daily_basic_batch.py  test_scoring.py  test_signals_engine.py  test_themes.py  test_update_daily_us_batch.py
(+18 files in other folders)
