# 项目元数据 + 工具配置集中地

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sh-quant"
version = "0.1.0"
description = "Personal quant research toolkit"
requires-python = ">=3.10"

# 把项目装成 editable package：在项目根目录 `pip install -e .` 一次，
# 之后 notebook / 脚本 / 测试在任何路径都能 `from utils.X import Y`。
[tool.setuptools]
packages = ["utils", "config"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["data_cache", "outputs", "notebooks/*.ipynb"]

[tool.ruff.lint]
# 精选的规则集，不开太多免得噪音：
#   E/W: pycodestyle 错误 + 警告
#   F:   pyflakes (未用变量 / 未定义名等)
#   I:   isort (import 顺序)
#   B:   flake8-bugbear (常见 bug pattern)
#   UP:  pyupgrade (用现代 Python 写法)
#   SIM: 简化建议
select = ["E", "F", "W", "I", "B", "UP", "SIM"]
ignore = [
    "E501",   # 行长度由 formatter 处理，lint 不再报
    "B008",   # 函数默认参数里调用 (FastAPI 之类需要，量化研究里也无害)
]

[tool.ruff.format]
# 单引号优先（与项目惯例对齐）
quote-style = "single"
indent-style = "space"
docstring-code-format = false
